--- a/zhtw.html
+++ b/zhtw.html
@@ -220,7 +220,7 @@
 					<header class="major">
 						<h2>13.我覺得已讀不回助理可以再更好一點</h2>
 					</header>
-					<p>若您有想要許願的功能或建議都歡迎您來我們的<strong><u><a href="https://facebook.com/holiestep" target="_blank">Facebook</a></u></strong>粉絲頁或<strong><u><a href="mailto:true.step16@hotmail.com" target="_blank">Email</a></u></strong>給我們唷!</p>
+					<p>若您有想要許願的功能或建議都歡迎您來我們的<strong><u><a href="mpt://open.fb/" target="_blank">Facebook</a></u></strong>粉絲頁或<strong><u><a href="mpt://send.email/" target="_blank">Email</a></u></strong>給我們唷!</p>
 				</div>
 			</div>
 		</div>
