--- a/enus.html
+++ b/enus.html
@@ -102,7 +102,7 @@
 					<header class="major">
 						<h2>5.Battery-related settings</h2>
 					</header>
-					<p>In order to keep the network available and receive messages normally，please add MPT and message Apps to the whitelist
+					<p>In order to keep the network available and receive messages normally, please add MPT and message Apps to the whitelist
 						on battery save mode, that can avoid system kill MPT service and message Apps services. </p>
 				</div>
 			</div>
@@ -135,7 +135,7 @@
 					<header class="major">
 						<h2>7.What Apps might stop MPT working?</h2>
 					</header>
-					<p>If there are Apps about battery save，anti-virus, enhance performance or memory cleaner in your device, it might stop
+					<p>If there are Apps about battery save,anti-virus, enhance performance or memory cleaner in your device, it might stop
 						kill/stop MPT service, so please ensure that add MPT and other message Apps to the whitelist.</p>
 				</div>
 			</div>
@@ -183,7 +183,7 @@
 					</header>
 					<h4><strong>LINE</strong></h4>
 					<p>If you are using LINE on PC/MAC, it will close notification on your mobile device automatically, and then MPT will not
-						receive message, in order to work normally please do some step on your PC/Mac verion，「Setting」→「Notifications」→「Notification
+						receive message, in order to work normally please do some step on your PC/Mac verion,「Setting」→「Notifications」→「Notification
 						Rules」→uncheck「Turn off smartphone notifications when logged in to the PC version」</p>
 
 					<h4><strong>Facebook Messenger</strong></h4>
@@ -218,7 +218,7 @@
 					<header class="major">
 						<h2>12.I am OPPO user, I am faceing some problems</h2>
 					</header>
-					<p>Dear OPPO users, according to OPPO system design, you will find that notification not always shows on notification bar, it affects many users, fortunately we provide a solution to solve it. Example for R9s，Other OPPO devices are similar way to solve it. MPT, Messenger, LINE and WhtatsApp we call Apps down below.
+					<p>Dear OPPO users, according to OPPO system design, you will find that notification not always shows on notification bar, it affects many users, fortunately we provide a solution to solve it. Example for R9s, Other OPPO devices are similar way to solve it. MPT, Messenger, LINE and WhtatsApp we call Apps down below.
 					</p>
 
 					<p>Step 1：Oepn [ Security Center ] → [ Privacy permission ] → [ auto-run management ] →enable [ Apps ] </p>
