fix underline and finish policy policy

--- a/faq_enus.html
+++ b/faq_enus.html
@@ -32,7 +32,7 @@
 					<header class="major">
 						<h2>1.Can not receive message?</h2>
 					</header>
-					<p>Ensure the <strong>「Notification Access」</strong> feature was <strong>enabled</strong>, <strong><u><a href="mpt://notification.access/">Click me to enable.</a></u></strong></p>
+					<p>Ensure the <strong>「Notification Access」</strong> feature was <strong>enabled</strong>, <strong><a href="mpt://notification.access/">Click me to enable.</a></strong></p>
 				</div>
 			</div>
 		</div>
@@ -246,7 +246,7 @@
 					<header class="major">
 						<h2>13.I think MPT could be better</h2>
 					</header>
-					<p>If you want some feature MPT not support, you can visit our <strong><u><a href="mpt://open.fb/" target="_blank">Facebook</a></u></strong> fan page or contact us with <strong><u><a href="mpt://send.email/" target="_blank">Email</a></u></strong></p>
+					<p>If you want some feature MPT not support, you can visit our <strong><a href="mpt://open.fb/" target="_blank">Facebook</a></strong> fan page or contact us with <strong><a href="mpt://send.email/" target="_blank">Email</a></strong></p>
 				</div>
 			</div>
 		</div>
