--- a/faq_zhcn.html
+++ b/faq_zhcn.html
@@ -31,7 +31,7 @@
 					<header class="major">
 						<h2>1.收不到信息怎麽办?</h2>
 					</header>
-					<p>确认已开启通知访问，<strong><u><a href="mpt://notification.access/">点我启用</a></u></strong></p>
+					<p>确认已开启通知访问，<strong><a href="mpt://notification.access/">点我启用</a></strong></p>
 				</div>
 			</div>
 		</div>
@@ -220,7 +220,7 @@
 					<header class="major">
 						<h2>13.我觉得已读不回助理可以再更好一点</h2>
 					</header>
-					<p>若您有想要许愿的功能或建议都欢迎您来我们的<strong><u><a href="mpt://open.fb/" target="_blank">Facebook</a></u></strong>粉丝页或<strong><u><a href="mpt://send.email/" target="_blank">Email</a></u></strong>给我们唷!</p>
+					<p>若您有想要许愿的功能或建议都欢迎您来我们的<strong><a href="mpt://open.fb/" target="_blank">Facebook</a></strong>粉丝页或<strong><a href="mpt://send.email/" target="_blank">Email</a></strong>给我们唷!</p>
 				</div>
 			</div>
 		</div>
