--- a/faq_zhtw.html
+++ b/faq_zhtw.html
@@ -31,7 +31,7 @@
 					<header class="major">
 						<h2>1.收不到訊息怎麼辦?</h2>
 					</header>
-					<p>確認已開啟通知存取權，<strong><u><a href="mpt://notification.access/">點我啟用</a></u></strong></p>
+					<p>確認已開啟通知存取權，<strong><a href="mpt://notification.access/">點我啟用</a></strong></p>
 				</div>
 			</div>
 		</div>
@@ -220,7 +220,7 @@
 					<header class="major">
 						<h2>13.我覺得已讀不回助理可以再更好一點</h2>
 					</header>
-					<p>若您有想要許願的功能或建議都歡迎您來我們的<strong><u><a href="mpt://open.fb/" target="_blank">Facebook</a></u></strong>粉絲頁或<strong><u><a href="mpt://send.email/" target="_blank">Email</a></u></strong>給我們唷!</p>
+					<p>若您有想要許願的功能或建議都歡迎您來我們的<strong><a href="mpt://open.fb/" target="_blank">Facebook</a></strong>粉絲頁或<strong><a href="mpt://send.email/" target="_blank">Email</a></strong>給我們唷!</p>
 				</div>
 			</div>
 		</div>
