--- a/trademark.html
+++ b/trademark.html
@@ -43,7 +43,7 @@
 					</p>
 
 					<p>
-						<h4><strong>陌陌e</strong></h4>
+						<h4><strong>陌陌</strong></h4>
 						<a href="https://immomo.com/">陌陌</a> is a registered trademark or trademark of <a href="https://immomo.com/">北京陌陌科技有限公司</a>.
 					</p>
 
