--- a/privacy_policy_zhcn.html
+++ b/privacy_policy_zhcn.html
@@ -123,7 +123,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>8.Contact Information</h2>
+						<h2>8.聯絡我們</h2>
 					</header>
 					<strong><a href="mpt://open.fb/" target="_blank">HOLIESTAR</a></strong>
 					<br>
