--- a/faq_enus.html
+++ b/faq_enus.html
@@ -73,13 +73,29 @@
 		</div>
 	</section>
 
+	<!-- LINE -->
+	<section id="one" class="main style1">
+		<div class="container">
+			<div class="row 150%">
+				<div class="6u 12u$(medium)">
+					<header class="major">
+						<h2>4.Why LINE always show 「You have new messages」?</h2>
+					</header>
+					<p>Open the setting page in LINE, and go<strong>「Chats &amp; calls」</strong>cancel the feature down below.
+						<br>Cancel <strong>「Letter Sealing」</strong>
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<!-- Network -->
 	<section id="one" class="main style1">
 		<div class="container">
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>4.Keep network available</h2>
+						<h2>5.Keep network available</h2>
 					</header>
 					<p>MPT can only catch messages from notification bar, if your deivce receive too much messages at same time when you turning
 						on the network, at that time your Message Apps(Messenger, Whatsapp...) only show the latest one on the notificaton
@@ -100,7 +116,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>5.Battery-related settings</h2>
+						<h2>6.Battery-related settings</h2>
 					</header>
 					<p>In order to keep the network available and receive messages normally, please add MPT and message Apps to the whitelist
 						on battery save mode, that can avoid system kill MPT service and message Apps services. </p>
@@ -115,7 +131,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>6.MPT can not receive messages after few days?</h2>
+						<h2>7.MPT can not receive messages after few days?</h2>
 					</header>
 					<p>Some android devices will kill Apps background services automatically to enhace system performance, so MPT and other
 						message Apps could be killed sometimes, in order to ensure that the MPT work perfectly, please try to restart your
@@ -133,7 +149,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>7.What Apps might stop MPT working?</h2>
+						<h2>8.What Apps might stop MPT working?</h2>
 					</header>
 					<p>If there are Apps about battery save,anti-virus, enhance performance or memory cleaner in your device, it might stop
 						kill/stop MPT service, so please ensure that add MPT and other message Apps to the whitelist.</p>
@@ -148,7 +164,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>8.Why did MPT receive group message as personal message ?</h2>
+						<h2>9.Why did MPT receive group message as personal message ?</h2>
 					</header>
 					<p>MPT can only catch messages from notification bar, you will find that sometimes message Apps only show the person's
 						name instead of group name, so that MPT can not put the message to the correct group but the personal message, we apologize
@@ -164,7 +180,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>9.Why MPT can not support image, video and voice?</h2>
+						<h2>10.Why MPT can not support image, video and voice?</h2>
 					</header>
 					<p>According to Android system security, MPT can not catch image, video and voice from other message Apps, we apologize
 						for that and thank you for your understanding.</p>
@@ -179,7 +195,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>10.MPT can not work when I'm using Messenger on PC or Mac?</h2>
+						<h2>11.MPT can not work when I'm using Messenger on PC or Mac?</h2>
 					</header>
 					<h4><strong>LINE</strong></h4>
 					<p>If you are using LINE on PC/MAC, it will close notification on your mobile device automatically, and then MPT will not
@@ -200,7 +216,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>11.Why the message is incomplete?</h2>
+						<h2>12.Why the message is incomplete?</h2>
 					</header>
 					<p>MPT can only catch messages from notification bar, if the notification message was cut by message Apps's, MPT can only
 						catch the incomplete message, we apologize for that and thank you for your understanding.</p>
@@ -216,22 +232,28 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>12.I am OPPO user, I am faceing some problems</h2>
+						<h2>13.I am OPPO user, I am faceing some problems</h2>
 					</header>
-					<p>Dear OPPO users, according to OPPO system design, you will find that notification not always shows on notification bar, it affects many users, fortunately we provide a solution to solve it. Example for R9s, Other OPPO devices are similar way to solve it. MPT, Messenger, LINE and WhtatsApp we call Apps down below.
+					<p>Dear OPPO users, according to OPPO system design, you will find that notification not always shows on notification bar,
+						it affects many users, fortunately we provide a solution to solve it. Example for R9s, Other OPPO devices are similar
+						way to solve it. MPT, Messenger, LINE and WhtatsApp we call Apps down below.
 					</p>
 
 					<p>Step 1：Oepn [ Security Center ] → [ Privacy permission ] → [ auto-run management ] →enable [ Apps ] </p>
 
 					<p>Step 2：Oepn [ Security Center ] → [ Floating windows management ] → enable [ Apps ] </p>
 
-					<p>Step 3：Oepn [ Security Center ] → [ Quick scan ] → after scanned → click [ Security Protection ] → Find [ Apps ] and Add to whitelist</p>
+					<p>Step 3：Oepn [ Security Center ] → [ Quick scan ] → after scanned → click [ Security Protection ] → Find [ Apps ] and
+						Add to whitelist</p>
 
-					<p>Step 4 : Open [ Setting ] → [ Notification and status Bar ] → [ Manage notifications ] → Find [ Whoscall ] and setting like below</p>
+					<p>Step 4 : Open [ Setting ] → [ Notification and status Bar ] → [ Manage notifications ] → Find [ Whoscall ] and setting
+						like below</p>
 
-					<p>Step 5 : Open system [ Setting ] →  [ Battery ] → find [ Apps ] and uncheck [ Freeze when in background ] and [ Automatically optimize when an abnormally is detected]</p>
+					<p>Step 5 : Open system [ Setting ] → [ Battery ] → find [ Apps ] and uncheck [ Freeze when in background ] and [ Automatically
+						optimize when an abnormally is detected]</p>
 
-					<p>Step 6：(If you want to check Apps is enable) :Open [ Setting ] → [ Security Center ] → [ Startup app whitelist ] → Find [ Apps ]</p>
+					<p>Step 6：(If you want to check Apps is enable) :Open [ Setting ] → [ Security Center ] → [ Startup app whitelist ] → Find
+						[ Apps ]</p>
 
 				</div>
 			</div>
@@ -244,9 +266,9 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>13.I think MPT could be better</h2>
+						<h2>14.I think MPT could be better</h2>
 					</header>
-					<p>If you want some feature MPT not support, you can visit our <strong><a href="mpt://open.fb/" target="_blank">Facebook</a></strong> fan page or contact us with <strong><a href="mpt://send.email/" target="_blank">Email</a></strong></p>
+					<p>If you want some feature MPT not support, you can visit our <strong><a href="mpt://open.fb/" target="_blank">Facebook</a></strong>						fan page or contact us with <strong><a href="mpt://send.email/" target="_blank">Email</a></strong></p>
 				</div>
 			</div>
 		</div>
