--- a/faq_zhcn.html
+++ b/faq_zhcn.html
@@ -54,13 +54,29 @@
 		</div>
 	</section>
 
+	<!-- LINE -->
+	<section id="one" class="main style1">
+		<div class="container">
+			<div class="row 150%">
+				<div class="6u 12u$(medium)">
+					<header class="major">
+						<h2>3.为什麽LINE总是收到「您有新信息」?</h2>
+					</header>
+					<p>在<strong>LINE</strong>设定中的<strong>「聊天与通话」</strong>关闭以下功能
+						<br>取消<strong>「Letter Sealing」</strong>
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<!-- Facebook -->
 	<section id="one" class="main style1">
 		<div class="container">
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>3.Facebook的设置</h2>
+						<h2>4.Facebook的设置</h2>
 					</header>
 					<p>在<strong>Messenger</strong>的设置中的<strong>「通知与音效」</strong>确认启用以下功能
 						<br>启用✓<strong>「通知与音效」</strong>
@@ -77,7 +93,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>4.保持网路畅通</h2>
+						<h2>5.保持网路畅通</h2>
 					</header>
 					<p>已读不回助理只能截到通知栏所显示的通知，若在您开启网路功能时，同时进来很多信息，但您的通讯软体(LINE或Messenger)只显示最后一则信息，那就只能截到最后一则信息，因此保持网路畅通，才能截到大部份的信息，另外若手机处于省电模式也有可能在待机的时候被系统关掉了网路，而拦截不到信息唷。</p>
 				</div>
@@ -91,7 +107,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>5.电池相关系统设置</h2>
+						<h2>6.电池相关系统设置</h2>
 					</header>
 					<p>同上述为了网路畅通时，才能顺利地撷取信息，因此请确认您的手机在省电相关的设置中排除已读不回助理、LINE、Facebook以及其他您需要支援的通讯软体。</p>
 				</div>
@@ -105,7 +121,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>6.使用一阵子后无法接收到信息?</h2>
+						<h2>7.使用一阵子后无法接收到信息?</h2>
 					</header>
 					<p>部分手机系统会自动为了效能，会不定期的清除其他App的背景服务，因此已读不回助理也很有可能被清理掉，因此为了确保已读不回助理的服务正常运作，当您使用一阵子后无法收到信息时，请尝试重新启动手机。</p>
 				</div>
@@ -119,7 +135,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>7.有什麽App会影响已读不回助理运作呢?</h2>
+						<h2>8.有什麽App会影响已读不回助理运作呢?</h2>
 					</header>
 					<p>若您有安装省电、防毒、效能优化等相关APP时，这些APP可能会为了加速系统运行，并将已读不回助理的背景服务停止，请将已读不回助理、LINE、Messenger设置为白名单。</p>
 				</div>
@@ -133,7 +149,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>8.为什麽群组信息却被归类在个人信息?</h2>
+						<h2>9.为什麽群组信息却被归类在个人信息?</h2>
 					</header>
 					<p>已读不回助理只能截到通知栏所显示的通知，您会发现LINE有时在通知栏显示信息时，并没有显示来自哪个群组，因此已读不回助理也无法辨别信息来自哪个群组，非常抱歉是我们做得不够好，但LINE官方的通知设计若不改良，我们也无从修改，请您见谅。</p>
 				</div>
@@ -147,7 +163,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>9.为什麽LINE无法支援图片、影片、录音?</h2>
+						<h2>10.为什麽LINE无法支援图片、影片、录音?</h2>
 					</header>
 					<p>有鑑于Android完善系统的安全性，已读不回助理无法读取来自LINE、Messenger或其他通讯软体中更隐密的信息，对此我们也深感遗憾，请您见谅。</p>
 				</div>
@@ -161,7 +177,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>10.为什麽开启LINE电脑版时已读不回助理就收不到信息了?</h2>
+						<h2>11.为什麽开启LINE电脑版时已读不回助理就收不到信息了?</h2>
 					</header>
 					<p>在电脑版的LINE中，预设会在开启电脑版时关闭手机的通知，此时便会收不到信息，若要确保已读不回助理正常运作，请在电脑版的LINE中设置，「提醒」→「提醒规则」→取消勾选「使用电脑版时，智慧手机将不会收到提醒」。</p>
 				</div>
@@ -175,7 +191,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>11.为什麽Messenger的信息不完整?</h2>
+						<h2>12.为什麽Messenger的信息不完整?</h2>
 					</header>
 					<p>已读不回助理只能截到通知栏所显示的通知，若Messenger所能提供的最大长度信息小于实际信息就会发生此状况，这是Messenger的运作机制，对此我们也深感遗憾，请您见谅。</p>
 				</div>
@@ -190,10 +206,11 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>12.我是OPPO用户，遇到了些问题</h2>
+						<h2>13.我是OPPO用户，遇到了些问题</h2>
 					</header>
 					<p>亲爱的OPPO用户您好，因OPPO系统的特性，您会发现LINE与Messenger的通知，并不会每次都出现，因此也造成广大OPPO用户的困扰，但幸运的是我们提供了一些改善方法。教学以 OPPO R9s 为例，如果你使用的是其他 OPPO
-						机型请参考下面项目自行找寻对应设置哦，重新开机或是长时间待机后，请记得检查设置有没有跑掉喔。教学要开始了已读不回助理、LINE、Messenger、Whatsapp与已读不回助理有支援的通讯软体，以下简称App们。</p>
+						机型请参考下面项目自行找寻对应设置哦，重新开机或是长时间待机后，请记得检查设置有没有跑掉喔。教学要开始了已读不回助理、LINE、Messenger、Whatsapp与已读不回助理有支援的通讯软体，以下简称App们。
+					</p>
 
 					<p>步骤一：进入手机的[安全中心] → [权限隐私] → [自动启动管理] →把[App们] 设为背景启动</p>
 
@@ -218,7 +235,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>13.我觉得已读不回助理可以再更好一点</h2>
+						<h2>14.我觉得已读不回助理可以再更好一点</h2>
 					</header>
 					<p>若您有想要许愿的功能或建议都欢迎您来我们的<strong><a href="mpt://open.fb/" target="_blank">Facebook</a></strong>粉丝页或<strong><a href="mpt://send.email/" target="_blank">Email</a></strong>给我们唷!</p>
 				</div>
