--- a/faq_zhtw.html
+++ b/faq_zhtw.html
@@ -54,13 +54,30 @@
 		</div>
 	</section>
 
+	<!-- LINE -->
+	<section id="one" class="main style1">
+		<div class="container">
+			<div class="row 150%">
+				<div class="6u 12u$(medium)">
+					<header class="major">
+						<h2>3.為什麼LINE總是收到「您有新訊息」?</h2>
+					</header>
+					<p>在<strong>LINE</strong>設定中的<strong>「聊天．通話」</strong>關閉以下功能
+						<br>取消<strong>「Letter Sealing」</strong>
+					</p>
+				</div>
+			</div>
+		</div>
+	</section>
+
+
 	<!-- Facebook -->
 	<section id="one" class="main style1">
 		<div class="container">
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>3.Facebook的設定</h2>
+						<h2>4.Facebook的設定</h2>
 					</header>
 					<p>在<strong>Messenger</strong>的設定中的<strong>「通知與音效」</strong>確認啟用以下功能
 						<br>啟用✓<strong>「通知與音效」</strong>
@@ -77,7 +94,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>4.保持網路暢通</h2>
+						<h2>5.保持網路暢通</h2>
 					</header>
 					<p>已讀不回助理只能截到通知欄所顯示的通知，若在您開啟網路功能時，同時進來很多訊息，但您的通訊軟體(LINE或Messenger)只顯示最後一則訊息，那就只能截到最後一則訊息，因此保持網路暢通，才能截到大部份的訊息，另外若手機處於省電模式也有可能在待機的時候被系統關掉了網路，而攔截不到訊息唷。</p>
 				</div>
@@ -91,7 +108,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>5.電池相關系統設定</h2>
+						<h2>6.電池相關系統設定</h2>
 					</header>
 					<p>同上述為了網路暢通時，才能順利地擷取訊息，因此請確認您的手機在省電相關的設定中排除已讀不回助理、LINE、Facebook以及其他您需要支援的通訊軟體。</p>
 				</div>
@@ -105,7 +122,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>6.使用一陣子後無法接收到訊息?</h2>
+						<h2>7.使用一陣子後無法接收到訊息?</h2>
 					</header>
 					<p>部分手機系統會自動為了效能，會不定期的清除其他App的背景服務，因此已讀不回助理也很有可能被清理掉，因此為了確保已讀不回助理的服務正常運作，當您使用一陣子後無法收到訊息時，請嘗試重新啟動手機。</p>
 				</div>
@@ -119,7 +136,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>7.有什麼App會影響已讀不回助理運作呢?</h2>
+						<h2>8.有什麼App會影響已讀不回助理運作呢?</h2>
 					</header>
 					<p>若您有安裝省電、防毒、效能優化等相關APP時，這些APP可能會為了加速系統運行，並將已讀不回助理的背景服務停止，請將已讀不回助理、LINE、Messenger設定為白名單。</p>
 				</div>
@@ -133,7 +150,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>8.為什麼群組訊息卻被歸類在個人訊息?</h2>
+						<h2>9.為什麼群組訊息卻被歸類在個人訊息?</h2>
 					</header>
 					<p>已讀不回助理只能截到通知欄所顯示的通知，您會發現LINE有時在通知欄顯示訊息時，並沒有顯示來自哪個群組，因此已讀不回助理也無法辨別訊息來自哪個群組，非常抱歉是我們做得不夠好，但LINE官方的通知設計若不改良，我們也無從修改，請您見諒。</p>
 				</div>
@@ -147,7 +164,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>9.為什麼LINE無法支援圖片、影片、錄音?</h2>
+						<h2>10.為什麼LINE無法支援圖片、影片、錄音?</h2>
 					</header>
 					<p>有鑑於Android完善系統的安全性，已讀不回助理無法讀取來自LINE、Messenger或其他通訊軟體中更隱密的訊息，對此我們也深感遺憾，請您見諒。</p>
 				</div>
@@ -161,7 +178,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>10.為什麼開啟LINE電腦版時已讀不回助理就收不到訊息了?</h2>
+						<h2>11.為什麼開啟LINE電腦版時已讀不回助理就收不到訊息了?</h2>
 					</header>
 					<p>在電腦版的LINE中，預設會在開啟電腦版時關閉手機的通知，此時便會收不到訊息，若要確保已讀不回助理正常運作，請在電腦版的LINE中設定，「提醒」→「提醒規則」→取消勾選「使用電腦版時，智慧手機將不會收到提醒」。</p>
 				</div>
@@ -175,7 +192,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>11.為什麼Messenger的訊息不完整?</h2>
+						<h2>12.為什麼Messenger的訊息不完整?</h2>
 					</header>
 					<p>已讀不回助理只能截到通知欄所顯示的通知，若Messenger所能提供的最大長度訊息小於實際訊息就會發生此狀況，這是Messenger的運作機制，對此我們也深感遺憾，請您見諒。</p>
 				</div>
@@ -190,10 +207,11 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>12.我是OPPO用戶，遇到了些問題</h2>
+						<h2>13.我是OPPO用戶，遇到了些問題</h2>
 					</header>
 					<p>親愛的OPPO用戶您好，因OPPO系統的特性，您會發現LINE與Messenger的通知，並不會每次都出現，因此也造成廣大OPPO用戶的困擾，但幸運的是我們提供了一些改善方法。教學以 OPPO R9s 為例，如果你使用的是其他 OPPO
-						機型請參考下面項目自行找尋對應設定哦，重新開機或是長時間待機後，請記得檢查設定有沒有跑掉喔。教學要開始了已讀不回助理、LINE、Messenger、Whatsapp與已讀不回助理有支援的通訊軟體，以下簡稱App們。</p>
+						機型請參考下面項目自行找尋對應設定哦，重新開機或是長時間待機後，請記得檢查設定有沒有跑掉喔。教學要開始了已讀不回助理、LINE、Messenger、Whatsapp與已讀不回助理有支援的通訊軟體，以下簡稱App們。
+					</p>
 
 					<p>步驟一：進入手機的[安全中心] → [權限隱私] → [自動啟動管理] →把[App們] 設為背景啟動</p>
 
@@ -218,7 +236,7 @@
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
 					<header class="major">
-						<h2>13.我覺得已讀不回助理可以再更好一點</h2>
+						<h2>14.我覺得已讀不回助理可以再更好一點</h2>
 					</header>
 					<p>若您有想要許願的功能或建議都歡迎您來我們的<strong><a href="mpt://open.fb/" target="_blank">Facebook</a></strong>粉絲頁或<strong><a href="mpt://send.email/" target="_blank">Email</a></strong>給我們唷!</p>
 				</div>
