--- a/device_guide/oppo/enUS.html
+++ b/device_guide/oppo/enUS.html
@@ -102,34 +102,33 @@
 		</div>
 	</section>
 
-	<!-- more feature -->
-	<section id="one" class="main style1">
-		<div class="container">
-			<div class="row 150%">
-				<div class="6u 12u$(medium)">
-					<p>若您有想要許願的功能或建議都歡迎您來我們的<strong><a href="mpt://open.fb/" target="_blank">Facebook</a></strong>粉絲頁或<strong><a href="mpt://send.email/" target="_blank">Email</a></strong>給我們唷!</p>
+		<!-- more feature -->
+		<section id="one" class="main style1">
+			<div class="container">
+				<div class="row 150%">
+					<div class="6u 12u$(medium)">
+						<p>If you want some feature MPT not support, you can visit our <strong><a href="mpt://open.fb/" target="_blank">Facebook</a></strong>						fan page or contact us with <strong><a href="mpt://send.email/" target="_blank">Email</a></strong></p>
+					</div>
 				</div>
 			</div>
-		</div>
-	</section>
-
-
-	<!-- Footer -->
-	<section id="footer">
-		<ul class="copyright">
-			<li>HOLIESTAR</li>
-			<li>已讀不回助理</li>
-		</ul>
-	</section>
-
-	<!-- Scripts -->
-	<script src="assets/js/jquery.min.js"></script>
-	<script src="assets/js/jquery.scrolly.min.js"></script>
-	<script src="assets/js/skel.min.js"></script>
-	<script src="assets/js/util.js"></script>
-	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-	<script src="assets/js/main.js"></script>
-
+		</section>
+	
+	
+		<!-- Footer -->
+		<section id="footer">
+			<ul class="copyright">
+				<li>HOLIESTAR</li>
+				<li>Message Peeping Tom</li>
+			</ul>
+		</section>
+	
+		<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script src="assets/js/main.js"></script>
 
 </body>
 
