--- a/device_guide/oppo/enUS.html
+++ b/device_guide/oppo/enUS.html
@@ -16,8 +16,9 @@
 	<!-- Header -->
 	<section id="header">
 		<div class="inner">
-			<h1>Message Peeping Tom setting on OPPO devices</h1>
-			<p>Because of the varying optimization software used by different brands, Message Peeping Tom may not work normally on all devices. Please take note of the following instructions and set your device accordingly.</p>
+			<h1>Message Peeping Tom setting on OPPO devices (A39,F1s,R9s,R11 and other OPPO devices)</h1>
+			<p>Because of the varying optimization software used by different brands, Message Peeping Tom may not work normally on all
+				devices. Please take note of the following instructions and set your device accordingly.</p>
 			<ul class="actions">
 				<li><a href="#one" class="button scrolly">START</a></li>
 			</ul>
@@ -27,12 +28,13 @@
 
 
 	<!-- Three -->
-	<section id="three" class="main style1 special">
+	<section id="one" class="main style1 special">
 		<div class="container">
 			<header class="major">
 				<h2>Step 1 </h2>
 			</header>
-			<p>Tap [Phone Manager] → Tap [ Privacy Permissions ] → Tap [ Startup manager ] → Find [ Message Peeping Tom ] and enable it</p>
+			<p>Tap [Phone Manager] → Tap [ Privacy Permissions ] → Tap [ Startup manager ] → Find [ Message Peeping Tom ] and enable
+				it</p>
 			<div class="row 150%">
 				<div class="4u 12u$(medium)">
 					<span class="image fit"><img src="images/enUS/0.png" alt="" /></span>
@@ -53,7 +55,7 @@
 		</div>
 	</section>
 
-	<section id="three" class="main style1 special">
+	<section id="two" class="main style1 special">
 		<div class="container">
 			<header class="major">
 				<h2>Step 2</h2>
@@ -99,36 +101,37 @@
 				</div>
 
 			</div>
+			<p>（👉In order to prevent message APPs killed by system, please repeat above steps and apply on your message APPs(WhatsApp, Facebook, Instagram...),👈）</p>
 		</div>
 	</section>
 
-		<!-- more feature -->
-		<section id="one" class="main style1">
-			<div class="container">
-				<div class="row 150%">
-					<div class="6u 12u$(medium)">
-						<p>If you want some feature MPT not support, you can visit our <strong><a href="mpt://open.fb/" target="_blank">Facebook</a></strong>						fan page or contact us with <strong><a href="mpt://send.email/" target="_blank">Email</a></strong></p>
-					</div>
+	<!-- more feature -->
+	<section id="four" class="main style1">
+		<div class="container">
+			<div class="row 150%">
+				<div class="6u 12u$(medium)">
+					<p>If you want some feature MPT not support, you can visit our <strong><a href="mpt://open.fb/" target="_blank">Facebook</a></strong>						fan page or contact us with <strong><a href="mpt://send.email/" target="_blank">Email</a></strong></p>
 				</div>
 			</div>
-		</section>
-	
-	
-		<!-- Footer -->
-		<section id="footer">
-			<ul class="copyright">
-				<li>HOLIESTAR</li>
-				<li>Message Peeping Tom</li>
-			</ul>
-		</section>
-	
-		<!-- Scripts -->
-		<script src="assets/js/jquery.min.js"></script>
-		<script src="assets/js/jquery.scrolly.min.js"></script>
-		<script src="assets/js/skel.min.js"></script>
-		<script src="assets/js/util.js"></script>
-		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-		<script src="assets/js/main.js"></script>
+		</div>
+	</section>
+
+
+	<!-- Footer -->
+	<section id="footer">
+		<ul class="copyright">
+			<li>HOLIESTAR</li>
+			<li>Message Peeping Tom</li>
+		</ul>
+	</section>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrolly.min.js"></script>
+	<script src="assets/js/skel.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+	<script src="assets/js/main.js"></script>
 
 </body>
 
