--- a/device_guide/oppo/zhTW.html
+++ b/device_guide/oppo/zhTW.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>OPPO R11 手機 已讀不回助理 設定</title>
+	<title>OPPO 手機 已讀不回助理 設定</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,7 +13,7 @@
 	<!-- Header -->
 	<section id="header">
 		<div class="inner">
-			<h1>OPPO R11 手機 已讀不回助理 設定</h1>
+			<h1>OPPO 手機 已讀不回助理 設定，適用於A39、F1s、R9s、R11與其他OPPO裝置</h1>
 			<p>由於各廠牌使用的不同 [客製效能優化] 或 [省電] 軟體，可能因此會導致 已讀不回助理 無法正常運作，大家只要按照教學逐步設定就可以順暢使用 已讀不回助理 囉。請使用 OPPO 手機的 已讀不回助理 用戶嘗試以下步驟設定，現在就跟著一起操作看看吧！</p>
 			<ul class="actions">
 				<li><a href="#one" class="button scrolly">開始步驟</a></li>
@@ -24,7 +24,7 @@
 
 
 	<!-- Three -->
-	<section id="three" class="main style1 special">
+	<section id="one" class="main style1 special">
 		<div class="container">
 			<header class="major">
 				<h2>步驟一</h2>
@@ -50,7 +50,7 @@
 		</div>
 	</section>
 
-	<section id="three" class="main style1 special">
+	<section id="two" class="main style1 special">
 		<div class="container">
 			<header class="major">
 				<h2>步驟二</h2>
@@ -86,7 +86,7 @@
 				<h2>步驟三</h2>
 			</header>
 			<p>點下 [多工鍵] → 把 [已讀不回助理] 往下拉 → 然後鎖頭就會跑出來</p>
-			<p>（👉鎖頭出來才表示 已讀不回助理 不會被 OPPO 的系統清除喔😉）</p>
+			<p>（鎖頭出來才表示 已讀不回助理 不會被 OPPO 的系統清除喔）</p>
 			<div class="row 150%">
 				<div class="4u 12u$(medium)">
 					<span class="image fit"><img src="images/zhtw/9.png" alt="" /></span>
@@ -97,11 +97,12 @@
 				</div>
 
 			</div>
+			<p>（👉記得重複以上步驟，設定您的訊息APP(Facebook, LINE, Instagram...)，已免訊息APP被系統清除，影響已讀不回助理的運作唷👈）</p>
 		</div>
 	</section>
 
 	<!-- more feature -->
-	<section id="one" class="main style1">
+	<section id="four" class="main style1">
 		<div class="container">
 			<div class="row 150%">
 				<div class="6u 12u$(medium)">
